📝 docs(CV): update and streamline CV content
- major restructuring and rewriting for clarity and conciseness
- added new sections and removed outdated content
- updated professional summary and core skills
- refined employment history and technology stack
- included new projects and publications for completeness